<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.ui.MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


    <!-- Custom Action Bar - Optimized -->
        <LinearLayout
            android:id="@+id/customActionBar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="@dimen/action_bar_padding_horizontal"
            android:background="?attr/colorPrimaryVariant">

            <!-- Portfolio Title -->
            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="@dimen/action_bar_title_icon_size"
                android:layout_height="@dimen/action_bar_title_icon_size"
                android:layout_marginEnd="@dimen/action_bar_title_icon_margin"
                android:src="@drawable/ic_person"
                app:tint="@color/white" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/portfolio_title"
                android:textColor="@color/white"
                android:textSize="@dimen/text_21sp"
                android:textStyle="bold" />

            <!-- Action Buttons -->
            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/btnSort"
                android:layout_width="@dimen/action_bar_icon_size"
                android:layout_height="@dimen/action_bar_icon_size"
                android:layout_marginEnd="@dimen/action_bar_icon_margin"
                android:contentDescription="@string/SortButton"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:clickable="true"
                android:focusable="true"
                android:src="@drawable/ic_sort"
                app:tint="@color/white" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/btnSearch"
                android:layout_width="@dimen/action_bar_icon_size"
                android:layout_height="@dimen/action_bar_icon_size"
                android:contentDescription="@string/SearchButton"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:clickable="true"
                android:focusable="true"
                android:src="@drawable/ic_search"
                app:tint="@color/white" />

        </LinearLayout>

        <!-- Sticky Tabs -->
        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            app:layout_scrollFlags="noScroll"
            app:tabIndicatorColor="@color/blue_500"
            app:tabIndicatorHeight="@dimen/tab_indicator_height"
            app:tabMode="fixed"
            app:tabSelectedTextColor="@color/blue_500"
            app:tabTextColor="@color/gray_500">

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:tabTextAppearance="@style/CustomTabText"
                android:text="@string/tab_positions" />

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:tabTextAppearance="@style/CustomTabText"
                android:text="@string/tab_holdings" />

        </com.google.android.material.tabs.TabLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <!-- Main Content - Optimized -->

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/holdings_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scrollbars="none"
                android:nestedScrollingEnabled="false"
                android:paddingBottom="@dimen/content_padding_bottom"
                app:layout_behavior="@string/appbar_scrolling_view_behavior"
                android:overScrollMode="never" />


    <!-- Portfolio Summary - Fixed at Bottom -->
    <include
        android:id="@+id/portfolio_summary"
        layout="@layout/layout_portfolio_summary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom" />

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_margin="@dimen/progress_bar_margin"
        android:visibility="gone" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>